--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.7.9",
     "chart.js": "^4.4.8",
     "dayjs": "^1.11.13",
+    "dotenv": "^16.4.7",
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
     "react": "^19.0.0",
@@ -27,6 +28,7 @@
     "react-hook-form": "^7.54.2",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0",
+    "sharp": "^0.33.5",
     "socket.io-client": "^4.8.1",
     "zod": "^3.24.2"
   },
