--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-hook-form": "^7.54.2",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0",
+    "react-toastify": "^11.0.5",
     "sharp": "^0.33.5",
     "socket.io-client": "^4.8.1",
     "zod": "^3.24.2"
