--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^4.1.2",
+    "@mui/icons-material": "^6.4.8",
     "@mui/material": "^6.4.5",
     "@react-pdf/renderer": "^4.2.2",
     "@reduxjs/toolkit": "^2.6.0",
